# haskellBook

Chapter5/: typeKwonDo.hs
Chapter7/: casePractice.hs  exercisesEnd.hs  variety.hs
Chapter8/: cornellPractice.hs  wordNumber.hs
chapter10/: dbProc.hs  rewriteFolds.hs  scanEx.hs  warmup.hs
chapter11/: asEx.hs  binaryTree.hs  cipher.hs  huttonsRazor.hs  languageEx.hs  logicGoats.hs  phoneEx.hs  programmer.hs  vehicleEx.hs
chapter12/: binaryTree.hs  eitherLibrary.hs  maybeLibrary.hs  naturalNum.hs  stringProcessing.hs  unfolds.hs  wordValidate.hs
chapter13/: ciphers.hs  palindrome.hs  person.hs
chapter13/hangman/: hangman.cabal
chapter14/addition/: Addition.hs  addition.cabal
chapter14/fool/: fool.cabal
chapter14/fool/src/: Main.hs
chapter14/hangman/: hangman.cabal
chapter14/idempotence/: idempotence.cabal
chapter14/morse/: morse.cabal
chapter14/quickCheck/: README.md  quickCheck.cabal
chapter14/quickCheck/src/: Main.hs  TestFunctions.hs
chapter14/wordNumberTest/: README.md  wordNumberTest.cabal
chapter14/wordNumberTest/src/: Main.hs  WordNumber.hs
chapter15/: madLib.hs  maybe.hs  monoidEx.hs  optionalMonoid.hs  semigroupEx.hs
chapter16/: functorInstances.hs  functorInstances2.hs  heavyLifting.hs  possibly.hs  rearrange.hs  sum.hs
chapter17/: constant.hs  fixerUpper.hs  identity.hs  listApplicative.hs  lookups.hs  vowelStops.hs
chapter17/VariationsEither/: README.md  VariationsEither.cabal
chapter17/instances/: instances.cabal
chapter17/listApplicative/: README.md  listApplicative.cabal
chapter18/: bind.hs  eitherMonad.hs  monadFunctions.hs
chapter18/monadInstances/: README.md  monadInstances.cabal
chapter20/: chapterEx.hs  libraryFunctions.hs
chapter21/instances/: instances.cabal
chapter21/skiFree/: README.md  skiFree.cabal
chapter21/tree/: tree.cabal
chapter22/: ReaderMonad.hs  ReaderPractice.hs  readingComp.hs  warmUp.hs
chapter23/: chapterEx.hs  fizzbuzz.hs  moi.hs  rollYourOwn.hs
chapter24/backtracking/: README.md  backtracking.cabal
chapter24/fractions/: fractions.cabal
chapter24/ini/: ini.cabal
chapter24/ints/: README.md  ints.cabal
chapter24/ipv4/: ipv4.cabal
chapter24/ipv6/: ipv6.cabal
chapter24/ipv6/src/: Main.hs
chapter24/log/: log.cabal
chapter24/marshalling/: README.md  marshalling.cabal
chapter24/marshalling/src/: Main.hs
chapter24/parsingFractions/: README.md  parsingFractions.cabal
chapter24/parsingPractice/: README.md  parsingPractice.cabal
chapter24/phone/: phone.cabal
chapter24/semVer/: README.md  semVer.cabal
chapter24/tryTry/: README.md  tryTry.cabal
chapter25/applicative/: applicative.cabal
chapter25/bifunctor/: README.md  bifunctor.cabal
chapter25/instance/: README.md  instance.cabal
chapter26/eitherT/: README.md  eitherT.cabal
chapter26/ex/: ex.cabal
chapter26/lift/: README.md  lift.cabal
chapter26/maybeT/: README.md  maybeT.cabal
chapter26/outerInner/: README.md  outerInner.cabal
chapter26/readerT/: README.md  readerT.cabal
chapter26/scotty/: Main.hs  README.md  scotty.cabal
chapter4/: chapterEx.hs  moodSwing.hs
chapter5/: chapterEx.hs  fix1.hs  type1.hs  typeKwonDo.hs
chapter6/: eq.hs  typeKwonDo.hs
chapter7/: Arith4.hs  exercisesEnd.hs  grabBag.hs
chapter8/: exercises.hs
chapter9/: charEx.hs  cipher.hs  cipher.hs.save  enumFromTo.hs  filter.hs  squareCube.hs  standardEx.hs  symmetry.hs  zip.hs
(+52 files in other folders)
