name:                quickCheck
version:             0.1.0.0
license-file:        LICENSE
author:              Abhigya Maskay
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     TestFunctions
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable quickCheck
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , QuickCheck
