name:                wordNumberTest
version:             0.1.0.0
license-file:        LICENSE
author:              Abhigya Maskay
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     WordNumber
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable wordNumberTest
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && <5
                       , hspec
  default-language:    Haskell2010
