name:                marshalling
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/marshalling#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable marshalling
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                  , text
                  , raw-strings-qq
                  , aeson
                  , bytestring
